crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__full_session_flow__e2e_full_interleaved.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
 ● Let me explore the structure.                                                
                                                                                
 ● glob → src/**/*.rs - 24 files                                                
                                                                                
 ● I found 24 Rust files. Let me check the main entry point.                    
                                                                                
 ● read_file → src/main.rs                                                      
                                                                                
 ● The main.rs initializes the CLI. Now checking dependencies.                  
                                                                                
 ● read_file → Cargo.toml                                                       
                                                                                
 ● This project uses tokio for async runtime and clap for CLI parsing.          
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
