crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__full_session_flow__e2e_full_long_scroll.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
 > Message 40                                                                   
                                                                                
 ● Response 41                                                                  
                                                                                
 > Message 42                                                                   
                                                                                
 ● Response 43                                                                  
                                                                                
 > Message 44                                                                   
                                                                                
 ● Response 45                                                                  
                                                                                
 > Message 46                                                                   
                                                                                
 ● Response 47                                                                  
                                                                                
 > Message 48                                                                   
                                                                                
 ● Response 49                                                                  
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
