crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__full_session_flow__e2e_full_step3_followup.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > What is Rust?                                                                
                                                                                
 ● Rust is a systems programming language focused on safety and performance.    
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
